--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
+name: Run Java tests on demand
+
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
 
 jobs:
   test:
@@ -9,6 +9,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: yarn install
-      - run: yarn test
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - run: mvn test
