--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Run Java tests on demand
+name: Run Java tests on push to master
 
 on:
   push:
@@ -15,3 +15,11 @@ jobs:
         with:
           java-version: 11
       - run: mvn test
+
+      - name: Download test results
+        uses: actions/download-artifact@v2
+        with:
+          name: test-results
+
+      - name: Show test results
+        run: cat test-results/TEST-*
